# lambda

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
bench/: CMakeLists.txt  bench_lambda.cpp
demo/: CMakeLists.txt  euler.cpp  problem.hpp
etc/: install_libcxx.sh
lib/: apply.hpp  bind.hpp  compose.hpp  curried.hpp  curry.hpp  flip.hpp  function_traits.hpp  invoke.hpp  lambda.hpp  macros.hpp  maybe.hpp  type_traits.hpp
lib/lambda/: apply.hpp  bind.hpp  compose.hpp  core.hpp  curried.hpp  curry.hpp  dollar.hpp  flip.hpp  function_traits.hpp  invoke.hpp  macros.hpp  maybe.hpp  monad.hpp  printer.hpp  show.hpp  stream.hpp  type_traits.hpp
lib/lambda/core/: compose.hpp  curried.hpp  curry.hpp  display.hpp  dollar.hpp  function_traits.hpp  invoke.hpp  maybe.hpp  mod.hpp  monad.hpp  printer.hpp  show.hpp  type_traits.hpp  variant.hpp
lib/lambda/stream/: chain.hpp  collect.hpp  drop.hpp  filter.hpp  fold.hpp  generator.hpp  ints.hpp  map.hpp  mod.hpp  pipe.hpp  stream.hpp  take.hpp
test/: CMakeLists.txt  test_bind.cpp  test_curry.cpp  test_dollar.cpp  test_lambda.cpp  test_maybe.cpp  test_show.cpp  test_stream.cpp
